--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^4.0.1",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.5.1",
+    "rxjs-compat": "^6.5.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
